[package]
name = "deno-leptess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
insta = "1.29.0"
leptess = "0.13.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
